# ADER-DG

./: LICENSE  README.md
Advection-Diffusion/: .cproject  .project  Makefile  ader_dg.f90  analyze_soln.f90  calc_time_step.f90  initialize.f90  la.f90  main.f90  params.ini  pde.f90  riemann_problem.f90  space_time_predictor.f90  surface_integral.f90  volume_integral.f90  write_data.f90
Baer-Nunziato/: ader_dg.f90  analyze_soln.f90  baer_nunziato_params.ini  basis.f90  calc_time_step.f90  initialize.f90  limiter.f90  main.f90  pde.f90  riemann_problem.f90  space_time_predictor.f90  surface_integral.f90  volume_integral.f90  write_data.f90
Euler/: CMakeLists.txt  Makefile  ader_dg.f90  analyze_soln.f90  basis.f90  calc_time_step.f90  constants.f90  element_update.f90  initialize.f90  la.f90  limiter.f90  main.f90  params.ini  pde.f90  quadrature.f90  riemann_problem.f90  space_time_predictor.f90  surface_integral.f90  volume_integral.f90  write_data.f90
